  * xml.XML (functionality moved to xml.Tree)
  (friebe)
- Deprecated ref() and deref() core functionality
  (friebe)

Features
~~~~~~~~
- Extended is() core functionality to accept primitive and array types
  (friebe)
- Added isInstance() method to lang.Type and lang.Primitive classes
  (friebe)
- Added typeof() core functionality
  (friebe)

RFCs
~~~~
- Implemented RFC #0193 - Generics optimization
  (friebe)
- Implemented RFC #0197 - Type literals in tokens
  (friebe)
- Implemented RFC #0189 - Extension methods
  (friebe)
- Implemented RFC #0185 - ClassFormatException for malformed annotations
  (friebe)  


Version ?.?.?, released ????-??-??
----------------------------------
SVN version: ?????

Heads up!
~~~~~~~~~
- Deprecated lang.Primitive::$INTEGER in favor of lang.Primitive::$INT
  (friebe)
- Deprecated lang.Type::$ANY in favor of lang.Type::$VAR
  (friebe)
- Changed util.collections.Map interface to ensure array access works.
  Any implementation must now adhere to http://de3.php.net/arrayaccess
  (friebe)

RFCs
~~~~
- Implemented RFC #0183 - lang.ResourceProvider
  (kiesel)

Bugfixes
~~~~~~~~
- Cleaned up various apidoc spelling issues in @param / @return, and
  exchanged "mixed" with "var" throughout the entire repository.
  (friebe)
- Fixed lang.XPClass raising fatals when methods inherited / implemented
  from builtin classes
  (friebe)
- Fixed reflection on lang.Throwable class in certain cases when builtin
  Exception class is queried for non-existant details
  (friebe)
- Fixed Wrapper::load() not executing casters and checkers when array
  values were submitted and first value is empty
  (ohinckel, Sebastian Kusnier)

Features
~~~~~~~~
- Made unittest.TestCase::assertInstanceOf() accept lang.Type instances
  as first parameter as well as strings with type names
  (friebe)
- Added new scriptlet.DirectOutputHttpScriptletResponse class
  (kiesel)
- Added "-r" command line switch to xp runner
  http://news.xp-framework.net/article/345/2010/02/16/